--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "dev.architectury.loom" version "1.3-SNAPSHOT"
+    id "dev.architectury.loom" version "1.4-SNAPSHOT"
 }
 
 sourceCompatibility = targetCompatibility = JavaVersion.VERSION_17
@@ -10,22 +10,12 @@ group = project.maven_group
 
 loom {
     silentMojangMappingsLicense()
-    forge {
-        mixinConfigs = [
-            "enchantedpotato.mixins.json"
-        ]
-    }
-    mixin.defaultRefmapName.set("enchantedpotato.refmap.json")
 }
 
 repositories {
     maven { url "https://maven.parchmentmc.org" }
     maven { url "https://maven.blamejared.com/" }
-    maven { url "https://maven.shedaniel.me/" }
-    maven { url "https://maven.fabricmc.net/" }
-    maven { url "https://maven.architectury.dev/" }
-    maven { url "https://maven.minecraftforge.net/" }
-    maven { url "https://plugins.gradle.org/m2/" }
+    maven { url "https://maven.neoforged.net" }
     maven {
         url "https://cursemaven.com"
         content {
@@ -43,7 +33,7 @@ dependencies {
         parchment("org.parchmentmc.data:parchment-${minecraft_version}:${parchment_version}@zip")
     }
 
-    forge "net.minecraftforge:forge:${forge_version}"
+    neoForge "net.neoforged:neoforge:${forge_version}"
 }
 
 processResources {
