--- a/gradle.properties
+++ b/gradle.properties
@@ -5,14 +5,14 @@
     org.gradle.caching=true
 
 # Base properties
-    loom.platform=forge
-    minecraft_version=1.20.1
-    forge_version=1.20.1-47.1.44
-    jei_version=15.2.0.27
-    parchment_version=2023.09.03
+    loom.platform=neoforge
+    minecraft_version=1.20.2
+    forge_version=20.2.59-beta
+    jei_version=16.0.0.28
+    parchment_version=2023.10.22
 
 # Mod Properties
-    mod_version=1.20.1-0.0.1
+    mod_version=1.20.2-0.0.1
     maven_group=com.teampotato.enchantedpotato
     archives_base_name=enchantedpotato
     mod_id=enchantedpotato
